Remove duplicate success alert div from web UI template

--- a/cmd/palette/serve/templates/index.html
+++ b/cmd/palette/serve/templates/index.html
@@ -376,10 +376,12 @@
                     </form>
 
                     <!-- Error Message -->
-                    <div x-show="error" x-cloak class="alert alert-error" x-text="error"></div>
-
-                    <!-- Success Message -->
-                    <div x-show="success" x-cloak class="alert alert-success" x-text="success"></div>
+                    <div
+                        x-show="error"
+                        x-cloak
+                        class="alert alert-error"
+                        x-text="error"
+                    ></div>
 
                     <!-- Success Message -->
                     <div
