--- a/cmd/palette/serve/templates/index.html
+++ b/cmd/palette/serve/templates/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Palette Converter</title>
-        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+        <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg" />
+        <link rel="shortcut icon" type="image/svg+xml" sizes="any" href="/favicon.svg" />
         <script
             src="https://unpkg.com/htmx.org@2.0.7/dist/htmx.min.js"
             defer
